docker/k8s/web/lets-encrypt.yml
#
# To run manually:
#   kubectl create job -n default --from=cronjob.batch/cron-lets-encrypt lets-encrypt-manual-force
#

apiVersion: v1
kind: Service
metadata:
  name: lets-encrypt-nodeport
  namespace: web
  labels:
    app: cron-lets-encrypt
spec:
  type: NodePort
  selector:
    app: cron-lets-encrypt
  ports:
  - name: http
    port: 80
    nodePort: 20080
    targetPort: 80
    protocol: TCP
