docker/k8s/web/web-files.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-files
  namespace: web
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - files.playmonumenta.com
  rules:
  - host: files.playmonumenta.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web-files
              port:
                number: 80

---

# Service / network ports

apiVersion: v1
kind: Service
metadata:
  name: web-files
  namespace: web
  labels:
    app: web-files
spec:
  type: ClusterIP
  selector:
    app: web-files
  ports:
  - name: "80"
    port: 80
    targetPort: 80

---

# This is the actual deployment, specifying what it should run
#
# This is just a stock nginx webserver with the appropriate directory mounted
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-files
  namespace: web
  labels:
    app: web-files
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-files
  template:
    metadata:
      labels:
        app: web-files
    spec:
      priorityClassName: monumenta-infra
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-17
      volumes:
        - name: nfs-web-files
          hostPath:
            path: /nfs/web-files/files
            type: Directory
        - name: nfs-web-logs
          hostPath:
            path: /nfs/web-files/logs
            type: Directory
      containers:
      - name: web-files
        image: nginx:stable
        resources:
          # 10 days (2026-09-07 to 2026-09-17 UTC): 39 MiB RSS, completely flat. nginx
          # serving static files.
          requests:
            cpu: 10m
            memory: 96Mi
          limits:
            cpu: "1"
            memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nfs-web-files
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: nfs-web-logs
          mountPath: /var/log/nginx
          readOnly: false
